Rebase ohrrpgce docker files on Debian 9 LTS, and move the compile script to the ohrrpgce-bin image, and don't auto-run it

--- a/ohrrpgce-bin/Dockerfile
+++ b/ohrrpgce-bin/Dockerfile
@@ -4,5 +4,8 @@
 
 FROM bobthehamster/ohrrpgce-build-env
 
+# Copy over the script for compiling the latest nightly
+COPY compile_ohrrpgce_nightly_inside_docker.sh /ohrrpgce/
+
 WORKDIR /ohrrpgce
-RUN ./compile_ohrrpgce_nightly_inside_docker.sh
+#RUN ./compile_ohrrpgce_nightly_inside_docker.sh
