Add libsdl2 and libsdl2-mixer to the build requirements

--- a/ohrrpgce-bin/Dockerfile
+++ b/ohrrpgce-bin/Dockerfile
@@ -4,8 +4,13 @@
 
 FROM bobthehamster/ohrrpgce-build-env
 
+# Create a non-root ohrrpgce user
+RUN useradd -m -d /ohrrpgce ohrrpgce
+USER ohrrpgce
+
 # Copy over the script for compiling the latest nightly
-COPY compile_ohrrpgce_nightly_inside_docker.sh /ohrrpgce/
+COPY --chown=ohrrpgce:ohrrpgce compile_ohrrpgce_nightly_inside_docker.sh /ohrrpgce/
 
 WORKDIR /ohrrpgce
-#RUN ./compile_ohrrpgce_nightly_inside_docker.sh
+
+# After you run this container, you can compile inside it
